# shiftlab-pro

./: .gitignore  start.sh
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_configuracoes_despesas.py  003_item_troca_filtro.py  004_fotos_filtro.py  005_forma_pagamento.py  006_taxa_valor.py  007_retiradas.py  20240101_0001_001_create_users_table.py  20240101_0002_002_create_domain_tables.py  20240101_0003_003_add_custo_litro_to_oleos.py  20240101_0004_004_add_desconto_to_trocas.py  20240101_0005_005_create_catalogo_veiculos.py  20240101_0006_006_add_foto_to_oleos.py  20240101_0007_007_restructure_oleos_marketplace.py  20240101_0008_008_ensure_foto_url_column.py  20240101_0009_009_drop_unused_oleo_columns.py  20240101_0010_010_add_codigo_produto_column.py  20240101_0011_011_create_filtros_oleo_table.py  20240101_0012_012_add_tipo_produto_entradas.py  20240101_0013_013_add_custo_snapshot.py  20240101_0014_014_add_taxa_percentual.py
backend/src/: config.py  database.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  catalogo.py  clientes.py  configuracoes.py  despesas.py  entradas_estoque.py  filtros.py  financeiro.py  oleos.py  pecas.py  retiradas.py  servicos.py  trocas.py  veiculos.py
backend/src/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/src/domain/: __init__.py  base.py  cliente.py  configuracao.py  despesa.py  entrada_estoque.py  filtro.py  foto_filtro.py  item_troca.py  modelo_referencia.py  montadora.py  oleo.py  peca.py  retirada.py  servico.py  troca_oleo.py  veiculo.py
backend/src/schemas/: __init__.py  cliente.py  configuracao.py  despesa.py  entrada_estoque.py  filtro.py  item_troca.py  modelo_referencia.py  montadora.py  oleo.py  peca.py  retirada.py  servico.py  troca_oleo.py  veiculo.py
backend/src/services/: __init__.py  catalogo_service.py  cliente_service.py  configuracao_service.py  despesa_service.py  entrada_estoque_service.py  filtro_service.py  fipe_service.py  oleo_service.py  peca_service.py  retirada_service.py  servico_service.py  troca_service.py  veiculo_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/ui/: carousel.tsx  dialog.tsx  hover-card.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCatalogo.ts  useClientes.ts  useConfiguracoes.ts  useDespesas.ts  useEntradasEstoque.ts  useFiltros.ts  useFinanceiro.ts  useOleos.ts  usePecas.ts  useRetiradas.ts  useServicos.ts  useTrocas.ts  useVeiculos.ts
frontend/src/lib/: api.ts  auth.ts  gerarPdfTroca.ts  masks.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/pages/clientes/: ClienteFormPage.tsx  ClientesPage.tsx
frontend/src/pages/despesas/: DespesaFormPage.tsx  DespesasPage.tsx
frontend/src/pages/entradas/: EntradaFormPage.tsx  EntradasPage.tsx
frontend/src/pages/filtros/: FiltroFormPage.tsx  FiltrosPage.tsx
frontend/src/pages/financeiro/: FinanceiroPage.tsx
frontend/src/pages/oleos/: OleoFormPage.tsx  OleosPage.tsx
frontend/src/pages/pecas/: PecaFormPage.tsx  PecasPage.tsx
frontend/src/pages/servicos/: ServicoFormPage.tsx  ServicosPage.tsx
frontend/src/pages/trocas/: TrocaFormPage.tsx  TrocasPage.tsx
frontend/src/pages/veiculos/: VeiculoFormPage.tsx  VeiculosPage.tsx
frontend/src/types/: auth.ts  catalogo.ts  cliente.ts  despesa.ts  entrada_estoque.ts  filtro.ts  financeiro.ts  oleo.ts  peca.ts  retirada.ts  servico.ts  troca.ts  veiculo.ts
